web/src/tree/_TreeHeader.scss
.tree-header {
    flex: none;
    height: 2.5rem;

    display: flex;
    align-items: center;
    padding: 0.5rem;
    overflow: hidden;
    white-space: nowrap;
    user-select: none;
    position: relative;

    &__title {
        flex: 1;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }

    &__close-button {
        @media (max-width: $media-md) {
            display: none;
        }
    }
}

.theme-light {
    .tree-header {
        &__close-button {
            &:hover {
                color: $color-light-text-5;
            }
        }
    }
}

